# HW_WEB_11

./: main.py  pyproject.toml
migrations/: env.py
migrations/versions/: c2e384e96b18_init.py  d686106fc6db_double_new_init.py  f902402a6a8a_new_init.py
src/conf/: config.py
src/database/: db.py
src/entity/: models.py
src/repository/: todos.py
src/routes/: todos.py
src/schemas/: todo.py
