[tool.poetry]
name = "hw-web-11"
version = "0.1.0"
description = ""
authors = ["ArtemZhuravlev <Utah954@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
setuptools = "^69.0.3"
fastapi = "^0.109.2"
uvicorn = "^0.27.0.post1"
alembic = "^1.13.1"
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"
pydantic = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
